--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== Paseo Caribbean Website  
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Currently designed with Twitter Bootstrap V3 using the responsive
+classes for mobile, tablet, and desktop.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Running Rails v4 however the website is not dynamic.
