fixed some errors with my css and the link to my webpage in the footer

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
-== Paseo Caribbean Website  
+== Paseo Caribbean Website
 
 Currently designed with Twitter Bootstrap V3 using the responsive
 classes for mobile, tablet, and desktop.
 
-Running Rails v4 however the website is entirely static
+Running on Rails v4.0 however the website is entirely static
